# escalator-to-nowhere

./: README.md  server.js
fe/: index.html
level_classifier/: README.md  classify_levels.py
links/: .env.example  .gitignore  main.py  pyproject.toml
links/prompts/: system-prompt.txt  system_prompt_v1.txt
links/src/: data_processor.py  extractor.py  llm_client.py
links/template/: output_template.csv
links/ui/: tree.html
ml/: .gitignore  README.md  infer_instance_segmentation.py  prepare_coco_from_geojson.py  requirements.txt  run_full_pipeline.sh  server.js  split_dataset_by_station.py  train_instance_segmentation.py
ml/dashboard/: index.html
